--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Garden — студия ландшафтного дизайна</title>
   <link rel="stylesheet" href="css/style.css">
-  <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
   <script src="./plugins/jQuery/slick.min.js"></script> 
   <script src="./plugins/jQuery/slider.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=7ea74aba-b233-418c-a2a5-f95b9b2330db&lang=ru_RU"></script>
 
-  <script defer src="./build/bundle.js"></script>
+  <script defer src="../build/bundle.js"></script>
   <script src="./plugins/yandex maps/map.js"></script>
 </head>
 
