--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Garden — студия ландшафтного дизайна</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="./src/plugins/jQuery/slick.min.js"></script> 
-  <script src="./src/plugins/jQuery/slider.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=7ea74aba-b233-418c-a2a5-f95b9b2330db&lang=ru_RU"></script>
-
-  <script defer src="./build/bundle.js"></script>
-  <script src="./src/plugins/yandex maps/map.js"></script>
+  <script src="../plugins/yandex maps/map.js"></script>
 </head>
 
 <body>
@@ -39,7 +34,7 @@
         </div>
 
         <svg class="menuIcons iconBurger">
-          <use xlink:href="icons/icons.svg#iconBurger"></use>
+          <use xlink:href="../../icons/icons.svg#iconBurger"></use>
         </svg>
       </div>
       <!-- Меню в мобильной версии-->
@@ -50,7 +45,7 @@
             <p>Студия ландшафтного<br>дизайна</p>
           </div>
           <svg class="menuIcons iconClose">
-            <use xlink:href="icons/icons.svg#iconClose"></use>
+            <use xlink:href="../../icons/icons.svg#iconClose"></use>
           </svg>
         </div>
         <nav class="navbar-nav"></nav>
@@ -58,21 +53,21 @@
           <div class="icon-menu-wrapper">
             <a href="#">
               <svg class="social-icons icon-Youtube">
-                <use xlink:href="icons/icons.svg#iconYoutube"></use>
+                <use xlink:href="../../icons/icons.svg#iconYoutube"></use>
               </svg>
             </a>
           </div>
           <div class="icon-menu-wrapper">
             <a href="#">
               <svg class="social-icons icon-OK">
-                <use xlink:href="icons/icons.svg#iconOk"></use>
+                <use xlink:href="../../icons/icons.svg#iconOk"></use>
               </svg>
             </a>
           </div>
           <div class="icon-menu-wrapper">
             <a href="#">
               <svg class="social-icons icon-VK">
-                <use xlink:href="icons/icons.svg#iconVK"></use>
+                <use xlink:href="../../icons/icons.svg#iconVK"></use>
               </svg>
             </a>
           </div>
@@ -91,19 +86,19 @@
           <div class="advantages">
             <div class="icon-wrapper">
               <svg class="advantages-icon advantages-icon1">
-                <use xlink:href="icons/icons.svg#iconWarranty"></use>
+                <use xlink:href="../../icons/icons.svg#iconWarranty"></use>
               </svg>
               <p class="text-advantages">Гарантия на<br> все виды работ</p>
             </div>
             <div class="icon-wrapper">
               <svg class="advantages-icon advantages-icon2">
-                <use xlink:href="icons/icons.svg#iconWork"></use>
+                <use xlink:href="../../icons/icons.svg#iconWork"></use>
               </svg>
               <p class="text-advantages">Работаем строго<br> в&nbsp;рамках сметы</p>
             </div>
             <div class="icon-wrapper">
               <svg class="advantages-icon advantages-icon3">
-                <use xlink:href="icons/icons.svg#iconCalendar"></use>
+                <use xlink:href="../../icons/icons.svg#iconCalendar"></use>
               </svg>
               <p class="text-advantages">Соблюдение сроков<br> точно по договору</p>
             </div>
@@ -124,12 +119,12 @@
             поставщиками из России,<br> Европы и США</p>
         </div>
         <div class="img-card">
-          <img src="img/imgWooden-boxes.jpg" alt="img: wooden box">
+          <img src="../../img/imgWooden-boxes.jpg" alt="img: wooden box">
         </div>
       </div>
       <div class="card-wrapper first-row">
         <div class="img-card">
-          <img src="img/imgYoungTomato.jpg" alt="img: tomatoes">
+          <img src="../../img/imgYoungTomato.jpg" alt="img: tomatoes">
         </div>
         <div class="bottom-card card-titles">
           <p>Лучшие растения<br>из питомника</p>
@@ -142,12 +137,12 @@
           <p>В течение двух месяцев<br> после работ мы ухаживаем<br> за вашим садом</p>
         </div>
         <div class="img-card">
-          <img src="img/imgPeter-beukema.jpg" alt="img: bush">
+          <img src="../../img/imgPeter-beukema.jpg" alt="img: bush">
         </div>
       </div>
       <div class="card-wrapper">
         <div class="img-card">
-          <img src="img/imgTools.jpg" alt="img: tools">
+          <img src="../../img/imgTools.jpg" alt="img: tools">
         </div>
         <div class="bottom-card card-titles">
           <p>Уложимся в срок<br>45 дней</p>
@@ -238,7 +233,7 @@
             Вс. выходной
           </li>
         </ul>
-        <button type="button" class="button filled-btn">Оставить заявку</button>
+        <button type="button" class="button filled-btn not-full-with">Оставить заявку</button>
       </div>
     </div>
   </section>
@@ -265,7 +260,7 @@
         </nav>
 
         <div class="footer-callback-wrapper">
-          <button type="button" class="button btn-main-callback footer-fill">Заказать звонок</button>
+          <button type="button" class="button btn-main-callback not-full-with footer-fill">Заказать звонок</button>
           <div class="header-callback-wrapper">
             <p class="phone"><a href="tel:+78003098880">+7 (800) 309-88-80</a></p>
             <p><a class="callback-header">Заказать звонок</a></p>
