--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <svg class="menuIcons iconBurger">
-          <use xlink:href="../../icons/icons.svg#iconBurger"></use>
+          <use xlink:href="./icons/icons.svg#iconBurger"></use>
         </svg>
       </div>
       <!-- Меню в мобильной версии-->
@@ -45,7 +45,7 @@
             <p>Студия ландшафтного<br>дизайна</p>
           </div>
           <svg class="menuIcons iconClose">
-            <use xlink:href="../../icons/icons.svg#iconClose"></use>
+            <use xlink:href="./icons/icons.svg#iconClose"></use>
           </svg>
         </div>
         <nav class="navbar-nav"></nav>
@@ -53,21 +53,21 @@
           <div class="icon-menu-wrapper">
             <a href="#">
               <svg class="social-icons icon-Youtube">
-                <use xlink:href="../../icons/icons.svg#iconYoutube"></use>
+                <use xlink:href="./icons/icons.svg#iconYoutube"></use>
               </svg>
             </a>
           </div>
           <div class="icon-menu-wrapper">
             <a href="#">
               <svg class="social-icons icon-OK">
-                <use xlink:href="../../icons/icons.svg#iconOk"></use>
+                <use xlink:href="./icons/icons.svg#iconOk"></use>
               </svg>
             </a>
           </div>
           <div class="icon-menu-wrapper">
             <a href="#">
               <svg class="social-icons icon-VK">
-                <use xlink:href="../../icons/icons.svg#iconVK"></use>
+                <use xlink:href="./icons/icons.svg#iconVK"></use>
               </svg>
             </a>
           </div>
@@ -86,19 +86,19 @@
           <div class="advantages">
             <div class="icon-wrapper">
               <svg class="advantages-icon advantages-icon1">
-                <use xlink:href="../../icons/icons.svg#iconWarranty"></use>
+                <use xlink:href="./icons/icons.svg#iconWarranty"></use>
               </svg>
               <p class="text-advantages">Гарантия на<br> все виды работ</p>
             </div>
             <div class="icon-wrapper">
               <svg class="advantages-icon advantages-icon2">
-                <use xlink:href="../../icons/icons.svg#iconWork"></use>
+                <use xlink:href="./icons/icons.svg#iconWork"></use>
               </svg>
               <p class="text-advantages">Работаем строго<br> в&nbsp;рамках сметы</p>
             </div>
             <div class="icon-wrapper">
               <svg class="advantages-icon advantages-icon3">
-                <use xlink:href="../../icons/icons.svg#iconCalendar"></use>
+                <use xlink:href="./icons/icons.svg#iconCalendar"></use>
               </svg>
               <p class="text-advantages">Соблюдение сроков<br> точно по договору</p>
             </div>
@@ -119,12 +119,12 @@
             поставщиками из России,<br> Европы и США</p>
         </div>
         <div class="img-card">
-          <img src="../../img/imgWooden-boxes.jpg" alt="img: wooden box">
+          <img src="./img/imgWooden-boxes.jpg" alt="img: wooden box">
         </div>
       </div>
       <div class="card-wrapper first-row">
         <div class="img-card">
-          <img src="../../img/imgYoungTomato.jpg" alt="img: tomatoes">
+          <img src="./img/imgYoungTomato.jpg" alt="img: tomatoes">
         </div>
         <div class="bottom-card card-titles">
           <p>Лучшие растения<br>из питомника</p>
@@ -137,12 +137,12 @@
           <p>В течение двух месяцев<br> после работ мы ухаживаем<br> за вашим садом</p>
         </div>
         <div class="img-card">
-          <img src="../../img/imgPeter-beukema.jpg" alt="img: bush">
+          <img src="./img/imgPeter-beukema.jpg" alt="img: bush">
         </div>
       </div>
       <div class="card-wrapper">
         <div class="img-card">
-          <img src="../../img/imgTools.jpg" alt="img: tools">
+          <img src="./img/imgTools.jpg" alt="img: tools">
         </div>
         <div class="bottom-card card-titles">
           <p>Уложимся в срок<br>45 дней</p>
