--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Green Garden — студия ландшафтного дизайна</title>
   <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=7ea74aba-b233-418c-a2a5-f95b9b2330db&lang=ru_RU"></script>
-  <script src="./plugins/yandex maps/map.js"></script>
+  <script src="../plugins/yandex maps/map.js"></script>
 </head>
 
 <body>
