--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Garden — студия ландшафтного дизайна</title>
-  <link rel="stylesheet" href="./docs/bundle.css">
+  <link rel="stylesheet" href="css/bundle.css">
   <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=7ea74aba-b233-418c-a2a5-f95b9b2330db&lang=ru_RU"></script>
 </head>
