--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
             поставщиками из России,<br> Европы и США</p>
         </div>
         <div class="img-card">
-          <img src="./img/imgWooden-boxes.jpg" alt="img: wooden box">
+          <img src="img/imgWooden-boxes.jpg" alt="img: wooden box">
         </div>
       </div>
       <div class="card-wrapper first-row">
         <div class="img-card">
-          <img src="./img/imgYoungTomato.jpg" alt="img: tomatoes">
+          <img src="img/imgYoungTomato.jpg" alt="img: tomatoes">
         </div>
         <div class="bottom-card card-titles">
           <p>Лучшие растения<br>из питомника</p>
@@ -138,12 +138,12 @@
           <p>В течение двух месяцев<br> после работ мы ухаживаем<br> за вашим садом</p>
         </div>
         <div class="img-card">
-          <img src="./img/imgPeter-beukema.jpg" alt="img: bush">
+          <img src="img/imgPeter-beukema.jpg" alt="img: bush">
         </div>
       </div>
       <div class="card-wrapper">
         <div class="img-card">
-          <img src="./img/imgTools.jpg" alt="img: tools">
+          <img src="img/imgTools.jpg" alt="img: tools">
         </div>
         <div class="bottom-card card-titles">
           <p>Уложимся в срок<br>45 дней</p>
